tests/duplicate_libs/duplicate_libs.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:2

Cannot cast `global_foo` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:1:2
   1| (global_foo: string); // error: number ~> string
       ^^^^^^^^^^

References:
   lib/shared/lib.js:3:25
   3| declare var global_foo: number;
                              ^^^^^^ [1]
   test.js:1:14
   1| (global_foo: string); // error: number ~> string
                   ^^^^^^ [2]



Found 1 error
